--- a/src/thehinc/thehinc.csproj
+++ b/src/thehinc/thehinc.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.3.31.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
+    <PackageReference Include="System.Runtime.Caching" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\thehinc.core\thehinc.core.csproj" />
+    <ProjectReference Include="..\thehinc.ioc\thehinc.ioc.csproj" />
+  </ItemGroup>
+
 </Project>
